--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </select>
         <button type="button" id="settingsBtn" class="btn-settings" title="GASのURLを設定">⚙️ 設定</button>
       </div>
-      <p id="employeeHint" class="employee-hint">名前のリストはGoogleスプレッドシートで管理されています。設定でGASのURLを入力すると読み込まれます。</p>
+      <p id="employeeHint" class="employee-hint">名前のリストはGoogleスプレッドシートで管理されています。管理者がURLを設定している場合は自動で読み込まれます。</p>
     </section>
 
     <section class="month-notes">
@@ -188,6 +188,8 @@
     </div>
   </div>
 
+  <!-- 管理者: 次の1行のURLをGASのウェブアプリのURLに書き換えると、従業員が個別に設定しなくても従業員リスト・提出が利用できます -->
+  <script>window.SHIFT_APP_GAS_URL = '';</script>
   <script src="app.js"></script>
 </body>
 </html>
