--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
             <span class="slot-num">1つ目</span>
             <div class="time-range-row">
               <div class="time-input-wrap">
-                <input type="text" id="slot1StartInput" class="time-input" placeholder="--:--" maxlength="5" autocomplete="off" />
+                <input type="text" id="slot1StartInput" class="time-input" placeholder="--:--" maxlength="5" autocomplete="off" inputmode="numeric" />
                 <button type="button" class="time-picker-btn" id="slot1StartClock" title="時刻を選択" aria-label="時刻を選択">🕐</button>
               </div>
               <span class="time-kara">から</span>
               <div class="time-input-wrap">
-                <input type="text" id="slot1EndInput" class="time-input" placeholder="--:--" maxlength="5" autocomplete="off" />
+                <input type="text" id="slot1EndInput" class="time-input" placeholder="--:--" maxlength="5" autocomplete="off" inputmode="numeric" />
                 <button type="button" class="time-picker-btn" id="slot1EndClock" title="時刻を選択" aria-label="時刻を選択">🕐</button>
               </div>
             </div>
@@ -90,12 +90,12 @@
             <span class="slot-num">2つ目（※時間指定を2つに分けたい場合に利用）</span>
             <div class="time-range-row">
               <div class="time-input-wrap">
-                <input type="text" id="slot2StartInput" class="time-input" placeholder="--:--" maxlength="5" autocomplete="off" />
+                <input type="text" id="slot2StartInput" class="time-input" placeholder="--:--" maxlength="5" autocomplete="off" inputmode="numeric" />
                 <button type="button" class="time-picker-btn" id="slot2StartClock" title="時刻を選択" aria-label="時刻を選択">🕐</button>
               </div>
               <span class="time-kara">から</span>
               <div class="time-input-wrap">
-                <input type="text" id="slot2EndInput" class="time-input" placeholder="--:--" maxlength="5" autocomplete="off" />
+                <input type="text" id="slot2EndInput" class="time-input" placeholder="--:--" maxlength="5" autocomplete="off" inputmode="numeric" />
                 <button type="button" class="time-picker-btn" id="slot2EndClock" title="時刻を選択" aria-label="時刻を選択">🕐</button>
               </div>
             </div>
