--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
         <div id="timeSlotsSection" class="time-slots-section">
           <p class="time-slots-label">時間指定</p>
+          <p class="time-slots-desc">（間の「:」は自動入力されます。12時は「1200」と入力。）</p>
           <div class="slot">
             <span class="slot-num">1つ目</span>
             <div class="time-range-row">
